--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li><a class="nav-link" data-scroll="#">Home</a></li>
         <li><a class="nav-link" data-scroll="#about">About</a></li>
         <li><a class="nav-link" target="_blank" data-scroll="#projects">Projects</a> </li>
-        <li><a class="nav-link" target="_blank" style="color: #007CF0" href="https://ko-fi.com/popcatdev">Donate</a>
+        <li><a class="nav-link" target="_blank" style="color: #007CF0" href="https://ko-fi.com/openpisces">Donate</a>
         </li>
       </ul>
     </div>
